assets/css/extended/custom.css
/* ... */
/* Global */
html {
  scroll-padding-top: 80px;
  overflow-y: auto;
  font-display: swap;
  overflow-anchor: none;
  scroll-behavior: auto;
  scrollbar-width: thin;
}

html.overflow-hidden {
  overflow: hidden;
}

html[data-nav="lg"] {
  scroll-padding-top: 140px;
}

html body:not(.dark) {
  background-color: var(--main-bg);
}

body {
  font-family: "Roboto", -apple-system, BlinkMacSystemFont, segoe ui, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
  font-weight: 300;
}

strong,
b,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
}

pre,
code {
  font-family: 'Roboto Mono', monospace;
}

h1 pre,
h2 pre,
h3 pre,
h4 pre,
h5 pre,
h6 pre,
h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code,
strong pre,
strong code {
  font-weight: 600;
}

.hidden {
  display: none !important;
}

.page-tags .page-header>h1,
.page-archives .page-header>h1,
.page-search .page-header>h1,
.post-title {
  font-size: 32px;
}

.post-content h2 {
  font-size: 29px;
}

.post-content h4 {
  font-size: 20px;
}

.post-content h5 {
  font-size: 15px;
}

.post-content table th {
  font-size: 16px;
}

.post-content table td {
  font-size: 15.5px
}

.post-content p strong pre,
.post-content p strong code {
  font-size: .88em
}

.post-content>.highlight>pre,
.post-content>pre {
  display: grid;
}

/* Header */
.header {
  background-color: var(--header);
  box-shadow: 0 2px 4px -1px var(--header-shadow);
  position: sticky;
  top: 0;
  z-index: 1000;
  font-family: "Roboto Condensed", -apple-system, BlinkMacSystemFont, segoe ui, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
  height: 60px;
  min-height: 60px;
  max-height: 60px;
  min-width: 315px;
}

.header:not(.no-overflow) {
  overflow: hidden;
}

.header.no-z-index {
  z-index: 0;
}

.header a {
  color: var(--theme);
}

.dark .header a {
  color: var(--primary);
}

.header .logo>a {
  line-height: calc(var(--header-height) - 0.111rem);
  filter: saturate(1.666);
  /* margin-top: 2px; */
}

.header .logo>a>svg {
  vertical-align: -25%;
}

.dark .header .logo>a {
  filter: saturate(1.666) contrast(0.33) brightness(1.22);
}

button#theme-toggle {
  font-size: 24px;
}

.wm-xl {
  font-size: 1.666666666em;
  line-height: .75em;
  vertical-align: -15%
}

.wm-xs-sup {
  font-size: 0.666em;
  vertical-align: text-top;
}

.wm-xs {
  font-size: 0.833em;
  vertical-align: 10%
}

.wm-sm {
  font-size: 0.966em;
  vertical-align: 2%
}

.wm-md {
  font-size: 1.166em;
  vertical-align: -2%
}


/* Header logos */
body .logo .logo-switches svg {
  vertical-align: -3%;
}

body .logo .logo-switches svg path,
body .logo>a>svg path {
  fill: #fff;
  stroke: #fff
}

body.dark .logo .logo-switches svg path,
body.dark .logo>a>svg path {
  fill: #005ebd;
  stroke: #3164b4
}

/* Bootstrap components. Start */
/*!
 * Bootstrap v4.6.2 (https://getbootstrap.com/)
 * Copyright 2011-2022 The Bootstrap Authors
 * Copyright 2011-2022 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
 */
/* Alerts */
.alert {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: var(--radius);
}

.alert-primary {
  color: #004085;
  background-color: #cce5ff;
  border-color: #b8daff;
}

.alert-primary a {
  color: #004085;
}

.alert-secondary {
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #d6d8db;
}

.alert-secondary a {
  color: #383d41;
}

.alert-success {
  color: #155724;
  background-color: #d4edda;
  border-color: #c3e6cb;
}

.alert-success a {
  color: #155724;
}

.alert-danger {
  color: #721c24;
  background-color: #f8d7da;
  border-color: #f5c6cb;
}

.alert-danger a {
  color: #721c24;
}

.alert-warning {
  color: #856404;
  background-color: #fff3cd;
  border-color: #f5e4b2;
}

.alert-warning a {
  color: #856404;
}

.alert-info {
  color: #0c5460;
  background-color: #d1ecf1;
  border-color: #bee5eb;
}

.alert-info a {
  color: #0c5460;
}

.post-content .alert code {
  background-color: var(--alert-code-bg);
  filter: brightness(1.2) contrast(1.2) saturate(1.2);
  font-weight: 600;
}

.alert>i {
  font-size: 86%;
  vertical-align: 10%;
}

.alert>i:has(+strong:empty) {
  vertical-align: 9%;
}

.alert>i+strong:empty {
  margin-right: 0.133em;
}

.alert>i+strong:empty+br {
  display: none;
}

.alert+details.post-content-details,
.alert+details.post-content-indent-details {
  margin-top: -14px;
}

/* Tricky and lazy-dazy way but seems to work perfectly fine */
.dark .alert {
  filter: brightness(0.7) contrast(1.72)
}

/* Notes */
.text-note {
  font-size: 87%;
  color: var(--text-note);
  padding-left: 0.211em;
}

.text-note > .text-note-title {
  text-transform: uppercase;
  letter-spacing: -0.2px;
}

.text-note > i.text-note-icon,
.text-note > .text-note-title {
  font-weight: 500;
  font-size: 97%;
}

.text-note > i.text-note-icon {
  font-size: 95%;
  vertical-align: 5%;
  margin-right: -0.111em;
}

.text-note > i.text-note-icon.danger,
.text-note > .text-note-title.danger {
  color: #d91e6f;
}

.dark .text-note > i.text-note-icon.danger,
.dark .text-note > .text-note-title.danger {
  color: #d51f74;
}

.text-note > i.text-note-icon.warning,
.text-note > .text-note-title.warning {
  color: #af6400;
}

.dark .text-note > i.text-note-icon.warning,
.dark .text-note > .text-note-title.warning {
  color: #ff9e29e0;
}

.text-note > i.text-note-icon.primary,
.text-note > .text-note-title.primary {
  color: #0128b6;
}

.dark .text-note > i.text-note-icon.primary,
.dark .text-note > .text-note-title.primary {
  color: #2957ff;
}

.text-note > .text-note-body {
  font-size: 97%;
}

/* Badges */
.badge {
  display: inline-block;
  padding: .25em .4em;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: var(--radius);
  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}
/* ... */

